# hotel-email-triage

./: .aiexclude  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  REVIEW_REPORT.md  ReplyRight.iss  build_exe.ps1  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-server.txt  requirements.txt  run.bat  run.sh  run_desktop.py  setup.ps1
.claude/: settings.json
.codex/: config.toml
agent-workspace/: AGENT_MESSAGES.md  AGENT_RULES.md  DECISIONS.md  HANDOFFS.md  PROJECT_STATE.md  TASK_BOARD.md
agent_comms/: from_claude.md  from_codex.md  watch_codex.ps1
agent_hub/: BLOCKERS.md  CURRENT_SITREP.md  DAILY_LOG.md  DECISIONS.md  HANDOFF_CLAUDE.md  HANDOFF_CODEX.md  HANDOFF_GEMINI.md  PYSIDE6_MIGRATION.md  RELEASE_GATES.md  TASK_BOARD.md
app/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json
build_support/: sitecustomize.py
docs/: ARCHITECTURE.md  CHANGELOG_AI.md  CLASSIFIER.md  CURRENT_STATE.md  DECISIONS.md  DEPENDENCY_EVALUATION.md  DEPLOYMENT.md  FUTURE_ROADMAP_SUPABASE_ADAPTIVE_LEARNING.md  HANDOFF.md  INSTALLER_STRATEGY.md  LABELING_PROMPTS.md  NATIVE_UI_MIGRATION.md  OPERATIONS_GUIDE.md  PROJECT_STRUCTURE.md  PROPERTY_KNOWLEDGE.md  PYSIDE6_MIGRATION_PLAN.md  RELEASE_BLOCKERS_v0.1.0.md  ROADMAP.md  SECURITY_AND_PRIVACY.md  TESTING.md  TRAINING_PIPELINE.md  TRAINING_WORKFLOW.md  V1_RELEASE_PLAN.md  supabase_schema.sql
installer/: build_installer.ps1  replyright_setup.iss  sample.env
outlook_dashboard/: __init__.py  active_learning.py  ai.py  auth.py  bundled_secrets.py  completed_requests_importer.py  completed_training_pipeline.py  config.py  database.py  graph.py  hotel_entities.py  local_classifier.py  main.py  mock_data.py  outlook_desktop.py  platform_compat.py  preferences.py  property_knowledge.py  redaction.py  runtime_log.py  sender_intelligence.py  signal_extractor.py  supabase_client.py  taxonomy.py  taxonomy_meta.py  text_utils.py  threading.py  training_bootstrap_data.py  training_pipeline.py  travel_programs.py  updater.py  urgency_engine.py
reference/email-agent/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
reference/email-agent/.github/workflows/: lint.yml  tests.yml
reference/email-agent/docs/: README.md  advanced_ai_features.md
reference/email-agent/docs/development/: architecture.md  contributing.md  testing.md
reference/email-agent/docs/features/: ADVANCED_FEATURES.md  ADVANCED_ROADMAP.md  FEATURES.md
reference/email-agent/docs/project/: PHASE_1_COMPLETION_SUMMARY.md  ROADMAP.md
reference/email-agent/docs/setup/: SETUP_COMPLETE.md  setup_gmail_oauth.md
reference/email-agent/docs/usage/: cli.md  docker.md  tui.md
reference/email-agent/scripts/: README.md
reference/email-agent/scripts/deprecated_migration_scripts/: README.md  analyze_ceo_emails.py  analyze_labeled_emails.py  apply_ceo_labels.py  authenticate_gmail.py  bulk_label_emails.py  ceo_insights.py  check_email_count.py  create_ceo_labels.py  create_receipt_label.py  create_remaining_ceo_labels.py  fast_ceo_processor.py  label_all_emails.py  process_ceo_emails_batch.py  pull_all_emails.py  pull_gmail_directly.py  setup_credentials.py  test_ai_analysis.py  test_ai_categorization.py  test_complete_flow.py  test_gmail_labels.py  test_install.py  test_receipt_labeling.py  test_triage_system.py
reference/email-agent/scripts/examples/: README.md  test_ceo_intelligence.py  test_collaborative_agents.py
reference/email-agent/scripts/utilities/: README.md  cleanup_overlabeled_emails.py
reference/email-agent/src/email_agent/: __init__.py  __version__.py  config.py  models.py
reference/email-agent/src/email_agent/agents/: __init__.py  action_extractor.py  categorizer.py  ceo_assistant.py  collaborative_processor.py  collector.py  commitment_tracker.py  crew.py  draft_agent.py  enhanced_ceo_labeler.py  enhanced_summarizer.py  learning_system.py  relationship_intelligence.py  sentiment_analyzer.py  summarizer.py  thread_analyzer.py  thread_intelligence.py  thread_summarizer.py  triage_agent.py  unified_ceo_intelligence.py
reference/email-agent/src/email_agent/cli/: __init__.py  main.py
reference/email-agent/src/email_agent/cli/commands/: __init__.py  brief.py  categories.py  ceo.py  config.py  drafts.py  inbox.py  init.py  pull.py  rules.py  status.py
reference/email-agent/src/email_agent/connectors/: __init__.py  gmail.py  gmail_service.py
reference/email-agent/src/email_agent/performance/: monitor.py
reference/email-agent/src/email_agent/rules/: __init__.py  advanced_engine.py  builtin.py  engine.py  processors.py
reference/email-agent/src/email_agent/sdk/: __init__.py  base.py  exceptions.py
reference/email-agent/src/email_agent/storage/: __init__.py  database.py  models.py
reference/email-agent/src/email_agent/tui/: __init__.py  app.py
reference/email-agent/tests/: __init__.py  conftest.py  test_agents.py  test_cli.py  test_database.py  test_draft_agent.py  test_enhanced_summarizer.py  test_models.py  test_tui.py
replyright_core/: README.md  __init__.py  app_state.py
replyright_kernel/: __init__.py  demo.py  engine.py  registry.py  settings.py
replyright_qt/: README.md  __init__.py  api_client.py  app.py  display_labels.py  main_qt.py  workers.py
scripts/: README.md  Resolve-Python.ps1  _dry_run_import.py  agent_label_chunk_workflow.py  agent_label_completed_requests.py  apply_labels.py  apply_labels_batch2.py  check_no_bundled_secrets.py  configure_google_ai_studio.ps1  export_for_labeling.py  format.ps1  import_labels.py  install_dev.ps1  lint.ps1  seal_credentials.py  seed_prompt_versions.py  synthetic_beta.py  test.ps1  typecheck.ps1  validate.ps1
tests/: conftest.py  test_active_learning.py  test_agent_coordination_contract.py  (+57 more)
(+150 files in other folders)
