[metadata]
name = email-agent
version = attr: email_agent.__version__
author = Jonathan Haas
author_email = jonathan@haas.holdings
description = AI-powered email management system with multi-agent intelligence
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haasonsaas/email-agent
project_urls =
    Bug Tracker = https://github.com/haasonsaas/email-agent/issues
    Documentation = https://github.com/haasonsaas/email-agent/tree/main/docs
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Communications :: Email
    Topic :: Office/Business
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    typer[all]>=0.9.0
    textual>=0.45.0
    rich>=13.7.0
    crewai>=0.28.0
    openai>=1.6.0
    anthropic>=0.8.0
    pydantic>=2.5.0
    sqlalchemy>=2.0.0
    alembic>=1.13.0
    keyring>=24.3.0
    cryptography>=41.0.0
    python-dotenv>=1.0.0
    httpx>=0.25.0
    google-auth>=2.25.0
    google-auth-oauthlib>=1.2.0
    google-auth-httplib2>=0.2.0
    google-api-python-client>=2.110.0
    msal>=1.25.0
    pyyaml>=6.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    email-agent = email_agent.cli.main:app

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.20.0
    black>=22.0.0
    ruff>=0.1.0
    mypy>=1.0.0
    pre-commit>=3.0.0

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*